[CREATE] login-form component & [UPDATE] css files

--- a/src/styles/desktop.css
+++ b/src/styles/desktop.css
@@ -1,6 +1,6 @@
 
 
-form {
+/*form {
     height: 350px;
     width: 400px;
 }
@@ -24,4 +24,4 @@ form button {
     height: 40px;
     width: 275px;
     font-size: 2.5rem;
-}
+}*/
